--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "electron": "^32.0.1"
     },
     "dependencies": {
-        "electron-squirrel-startup": "^1.0.1"
+        "electron-squirrel-startup": "^1.0.1",
+        "play": "^0.5.0"
     }
 }
