--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "pomodoro-electron",
     "version": "1.0.0",
     "main": "main.js",
+    "type": "module",
     "scripts": {
         "start": "electron-forge start",
         "package": "electron-forge package",
@@ -24,6 +25,7 @@
     },
     "dependencies": {
         "electron-squirrel-startup": "^1.0.1",
+        "electron-store": "^10.0.0",
         "play": "^0.5.0"
     }
 }
