--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     },
     "author": "Joe Pytlik",
     "license": "ISC",
-    "description": "Pomodoro app backend made in Electron.",
     "devDependencies": {
         "@electron-forge/cli": "^7.4.0",
         "@electron-forge/maker-deb": "^7.4.0",
@@ -21,7 +20,8 @@
         "@electron-forge/plugin-fuses": "^7.4.0",
         "@electron/fuses": "^1.8.0",
         "@rabbitholesyndrome/electron-forge-maker-portable": "^0.2.0",
-        "electron": "^32.0.1"
+        "electron": "^32.0.1",
+        "electron-builder": "^24.13.3"
     },
     "dependencies": {
         "electron-squirrel-startup": "^1.0.1",
